--- a/sftp-config.json
+++ b/sftp-config.json
@@ -8,14 +8,14 @@
     "sync_down_on_open": true,
     "sync_same_age": true,
     
-    "host": "tml2.cs.uwaterloo.ca",
-    // "host": "tml.cs.uwaterloo.ca",
+    //"host": "tml2.cs.uwaterloo.ca",
+    "host": "tml.cs.uwaterloo.ca",
     "user": "jj27wang",
     "password": "hatCiagiahoj",
     "port": "22",
     
-    "remote_path": "/home/jj27wang/NewSoSLSA/",
-    // "remote_path": "/home/jj27wang/novelty-detection/NovelDect_SoS/SoSLSA/",
+    //"remote_path": "/home/jj27wang/NewSoSLSA/",
+    "remote_path": "/home/jj27wang/novelty-detection/NovelDect_SoS/SoSLSA/",
     "ignore_regexes":[
     "data/","_pycache_/",
     "\\.git/","\\.pkl","\\.png","\\.pdf","\\.npz"
