--- a/sftp-config-alt.json
+++ b/sftp-config-alt.json
@@ -8,12 +8,12 @@
     "sync_down_on_open": true,
     "sync_same_age": true,
     
-    "host": "graham.computecanada.ca",
-    "user": "jing1991",
-    "password": "wjj1991913!",
+    "host": "tml.cs.uwaterloo.ca",
+    "user": "jj27wang",
+    "password": "hatCiagiahoj",
     "port": "22",
     
-    "remote_path": "/home/jing1991/projects/def-yaoliang/jing1991",
+    "remote_path": "/home/jj27wang/novelty-detection/NovelDect_SoS/SoSLSA/",
     "ignore_regexes":[
     "_pycache_/",
     // "checkpoints/",
