--- a/sftp-config.json
+++ b/sftp-config.json
@@ -18,8 +18,8 @@
     "_pycache_/",
     "checkpoints/",
     "history_image/",
-    "baseline_ADT/results/",
-    "baseline_GPND/",
+    // "baseline_ADT/",
+    // "baseline_GPND/",
     "baseline_LSA/",
     "baseline_VAE",
     "data/",
@@ -29,6 +29,7 @@
     ],
     //"file_permissions": "664",
     //"dir_permissions": "775",
+    
     
     //"extra_list_connections": 0,
 
