--- a/sftp-config-alt2.json
+++ b/sftp-config-alt2.json
@@ -8,18 +8,18 @@
     "sync_down_on_open": true,
     "sync_same_age": true,
     
-    "host": "q.vectorinstitute.ai",
-    "user": "jingjing",
-    "password": "beS3nifa",
+    "host": "graham.computecanada.ca",
+    "user": "jing1991",
+    "password": "wjj1991913!",
     "port": "22",
     
-    "remote_path": "/h/jingjing/TQM/",
+    "remote_path": "/home/jing1991/projects/def-yaoliang/jing1991",
     "ignore_regexes":[
     "_pycache_/",
     "checkpoints/",
     "history_image/",
-    // "baseline_ADT/",
-    // "baseline_GPND/",
+    "baseline_ADT/results/",
+    "baseline_GPND/",
     "baseline_LSA/",
     "baseline_VAE",
     "data/",
