--- a/sftp-config-alt.json
+++ b/sftp-config-alt.json
@@ -8,12 +8,12 @@
     "sync_down_on_open": true,
     "sync_same_age": true,
     
-    "host": "q.vectorinstitute.ai",
-    "user": "jingjing",
-    "password": "beS3nifa",
+    "host": "tml.cs.uwaterloo.ca",
+    "user": "jj27wang",
+    "password": "hatCiagiahoj",
     "port": "22",
     
-    "remote_path": "/h/jingjing/TQM/",
+    "remote_path": "/home/jj27wang/novelty-detection/NovelDect_SoS/SoSLSA/",
     "ignore_regexes":[
     "_pycache_/",
     "checkpoints/",
@@ -29,6 +29,7 @@
     ],
     //"file_permissions": "664",
     //"dir_permissions": "775",
+    
     
     //"extra_list_connections": 0,
 
